# Clippys-Revenge

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  profile_effects.py  pyproject.toml  uninstall.sh
clippy/: default_palette.toml  demo.py  harness.py  ide_template.py  launcher.py  mascot_render.py  noise.py  theme_browser.py  themes.py  themes_data.json  types.py  unified.py  unified_runner.py
clippy/effects/: fire.py  grove.py  invaders.py  mascot.py  microbes.py  paperclips.py
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
tests/: conftest.py  test_demo.py  test_fire.py  test_grove.py  test_harness.py  test_ide_template.py  test_invaders.py  test_launcher.py  test_mascot.py  test_mascot_render.py  test_microbes.py  test_native.py  test_noise.py  test_paperclips.py  test_theme_browser.py  test_themes.py  test_types.py  test_unified.py  test_unified_runner.py
tests/golden/: output_pixels_null_color.json
tools/: run_test_plugin.py  test_blank_plugin.py
